--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p class="text-muted mb-1">Hello I,m</p>
                         <h1 class="text-danger text-uppercase fs-1 fw-bold">Arya Mishra</h1>
                         <h2 class="fs-4">Front-End WebDevloper</h2>
-                        <p class="text-dark mt-4">“Talk is cheap. Show me the code.”</p>
+                        <p class="text-dark mt-4">“If You Don't Fail Sometimes You Are Not Being Ambitious Enough”</p>
                         <a href="#portfolio" class="btn-danger btn mt-3 px-3">My Work</a>
                     </div>
                 </div>
@@ -108,42 +108,42 @@
             
                 <div class="col-md-6 ">
                     <div class="skill-item ">
-                        <h3 class="fs-6 ">C Language</h3>
-                        <div class="progress my-2" style="height: 10px;">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 91%"></div>
-                       </div>
 
-                       <h3 class="fs-6">C++ Language</h3>
-                       <div class="progress my-2" style="height: 10px;">
-                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
-
-                        <h3 class="fs-6">Html5</h3>
+                       <h3 class="fs-6">Html5</h3>
                         <div class="progress my-2" style="height: 10px;">
                             <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
                        </div>
 
                        <h3 class="fs-6">C.S.S3</h3>
                        <div class="progress my-2" style="height: 10px;">
-                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 82%"></div>
                       </div>
                     </div>
 
                     <h3 class="fs-6">Boostrap4</h3>
                     <div class="progress my-2" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
                    </div>
 
-                   <h3 class="fs-6 my-2">JavaScript Embedded</h3>
+                   <h3 class="fs-6 my-2">JavaScript</h3>
                    <div class="progress" style="height: 10px;">
-                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                   </div>
 
-                  <h3 class="fs-6 my-2">jQuery</h3>
+                  <h3 class="fs-6 my-2">React J.S</h3>
                   <div class="progress" style="height: 10px;">
-                      <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+                      <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                  </div>
 
+                 <h3 class="fs-6 ">C Language</h3>
+                 <div class="progress my-2" style="height: 10px;">
+                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                </div>
+
+                <h3 class="fs-6">C++ Language</h3>
+                <div class="progress my-2" style="height: 10px;">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+               </div>
 
                  </div> 
                  </div>      
@@ -206,7 +206,7 @@
                                 <i class="fas fa fa-university"></i>
                             </div>
                             <h3 class="fs-5 py-2">Teaching</h3>
-                            <p class="text-muted">I Love to Teach Student's from class 3-10 in my freetime. <br> "The More You Spread Your Knowledge,The More you Get in Return. "</p>
+                            <p class="text-muted">I Love to Teach Students in my freetime. <br> "The More You Spread Your Knowledge,The More you Get in Return. "</p>
                         </div>
                     </div>
                 </div>
@@ -362,7 +362,7 @@
                     </div>
                     <div class="col-md-7">
                         <div class="contact-form">
-                            <form action="">
+                            <form action="mailto:arya44mishra@gmail.com">
                                 <div class="row">
                                     <div class="col-lg-6 mb-4">
                                         <input type="text" placeholder="Your Name" required class="form-control form-control-lg fs-6 border-0 shadow-sm">
