--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <p class="text-light fs-5">Do you have any Project</p>
-                        <h2 class="fs-1 text-white mb-4">I'm Avilable For FreeLancer Project's.</h2>
+                        <h2 class="fs-1 text-white mb-4">I'm Available For Freelance Projects.</h2>
                         <a href="#contact" class="btn btn-outline-light">Hire Me</a>
                     </div>
                 </div>
