--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                        <p class="text-muted">
                         Hello Folks,
                         Thanks for visiting my profile, 
-                        I’m "Arya Mishra”, A technical Ninja and frond-end Developer. 
+                        I’m "Arya Mishra”, A technical Ninja and front-end Developer. 
                         
                         I started learning code when I was 18 year’s old. It's been more than 2 years since I am working as a web developer. 
                         In the last 2 years I have worked on multiple projects and developed multiple websites, During this whole process I have worked on multiple technologies and learn them from scratch and now I am ready to start a new Journey of freelancing and ready to take new challenges. 
