--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                      <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                 </div>
 
-                <h3 class="fs-6">C++ Language</h3>
+                <h3 class="fs-6">Java </h3>
                 <div class="progress my-2" style="height: 10px;">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
                </div>
@@ -162,7 +162,7 @@
 
              <div class="row my-3">
                 <div class="col-lg-12  d-flex align-items-center">
-                        <a href="./projects/AryaMishra_InternshalaResume (1) (1).pdf" target="_blank" class="btn btn-danger me-5">Download C.V</a>
+                        <a href="./projects/arya resume.pdf" target="_blank" class="btn btn-danger me-5">Download C.V</a>
                         <div class="social-links ">
                             <a href="" class="text-dark me-2"> <i class="fab fa-instagram"></i> </a>
                             <a href="https://github.com/MISHRA2318" class="text-dark me-2"><i class="fab fa-github"></i></a>
