--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="progress my-2" style="height: 10px;">
                             <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
                        </div>
-
+                      
                        <h3 class="fs-6">C.S.S3</h3>
                        <div class="progress my-2" style="height: 10px;">
                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 82%"></div>
@@ -142,7 +142,7 @@
                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                   </div>
 
-                  <h3 class="fs-6 my-2">React J.S</h3>
+                  <h3 class="fs-6 my-2">Angular</h3>
                   <div class="progress" style="height: 10px;">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                  </div>
@@ -156,6 +156,11 @@
                 <div class="progress my-2" style="height: 10px;">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
                </div>
+
+                    <h3 class="fs-6 my-2">Data Structure And Alogrithms</h3>
+                   <div class="progress" style="height: 10px;">
+                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                  </div>
 
                  </div> 
                  </div>      
