--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
              <div class="row my-3">
                 <div class="col-lg-12  d-flex align-items-center">
-                        <a href="./projects/arya resume.pdf" target="_blank" class="btn btn-danger me-5">Download C.V</a>
+                        <a href="./projects/Arya mishra Resume-1.pdf" target="_blank" class="btn btn-danger me-5">Download C.V</a>
                         <div class="social-links ">
                             <a href="" class="text-dark me-2"> <i class="fab fa-instagram"></i> </a>
                             <a href="https://github.com/MISHRA2318" class="text-dark me-2"><i class="fab fa-github"></i></a>
