--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <a href="" class="text-dark me-2"> <i class="fab fa-instagram"></i> </a>
                             <a href="https://github.com/MISHRA2318" class="text-dark me-2"><i class="fab fa-github"></i></a>
                             <a href="https://twitter.com/Aryamis57353835" class="text-dark me-2"><i class="fab fa-twitter"></i></a>
-                            <a href="" class="text-dark me-2"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/arya-mishra-187aa9280/" class="text-dark me-2"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                  
@@ -425,7 +425,7 @@
              <div class="container-lg">
                 <div class="row">
                     <div class="col-lg-12">
-                       <p class="text-center m-0">&copy; 2021 Arya Mishra.com</p>
+                       <p class="text-center m-0">&copy; 2023 Arya Mishra.com</p>
                     </div>
                 </div>
              </div>   
