--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="about-text">
-                        <h3 class="fs-4 mb-3">Without Failure's You Cann't Achieve Anything In This World.</h3>
+                        <h3 class="fs-4 mb-3">Without Failure's You Can't Achieve Anything In This World.</h3>
                        <p class="text-muted">
                         Hello Folks,
                         Thanks for visiting my profile, 
@@ -168,7 +168,7 @@
 
              <div class="row my-3">
                 <div class="col-lg-12  d-flex align-items-center">
-                        <a href="./projects/frontend.pdf" target="_blank" class="btn btn-danger me-5">Download C.V</a>
+                        <a href="./frontend.pdf" target="_blank" class="btn btn-danger me-5">Download C.V</a>
                         <div class="social-links ">
                             <a href="" class="text-dark me-2"> <i class="fab fa-instagram"></i> </a>
                             <a href="https://github.com/MISHRA2318" class="text-dark me-2"><i class="fab fa-github"></i></a>
